src/objects/crms11__Notification_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>settings for notification rules.</description>
    <fields>
        <fullName>crms11__Enable_Pop_Out_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>&quot;Enable Pop-Out Notifications&quot; checkbox is used to enable notification on Flexpricer page.</description>
        <inlineHelpText>Used to enable Pop-out notification on Flexpricer page</inlineHelpText>
        <label>Enable Pop-Out Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>crms11__Enforce_Sharing_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked sharing rules will be enforced. For example if sharing setting for a Object is private, then notification will be based on only those records which are owned by the current user.</description>
        <inlineHelpText>If checked sharing rules will be enforced. For example if sharing setting for a Object is private, then notification will be based on only those records which are owned by the current user.</inlineHelpText>
        <label>Enforce Sharing Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>crms11__Maximum_Number_of_pop_out_notifications__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Maximum Notifications Per Action</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>crms11__Sales_In_Last_N_Days__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Number of days prior to show sales  data in the notification for of a particular product.</description>
        <inlineHelpText>Number of days prior to show sales  data in the notification for of a particular product.</inlineHelpText>
        <label>Past Sales Day Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Notification Settings</label>
</CustomObject>